base/spark/validatingwebhookconfigurations.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: spark-operator-webhook
  labels:
    helm.sh/chart: spark-operator-2.1.1
    app.kubernetes.io/name: spark-operator
    app.kubernetes.io/instance: spark-operator
    app.kubernetes.io/version: "2.1.1"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/component: webhook
webhooks:
  - name: validate-sparkoperator-k8s-io-v1beta2-sparkapplication.sparkoperator.k8s.io
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: spark-operator-webhook-svc
        namespace: spark
        port: 9443
        path: /validate-sparkoperator-k8s-io-v1beta2-sparkapplication
    sideEffects: NoneOnDryRun
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - default
    rules:
      - apiGroups: ["sparkoperator.k8s.io"]
        apiVersions: ["v1beta2"]
        resources: ["sparkapplications"]
        operations: ["CREATE", "UPDATE"]
    timeoutSeconds: 10
  - name: validate-sparkoperator-k8s-io-v1beta2-scheduledsparkapplication.sparkoperator.k8s.io
    admissionReviewVersions: ["v1"]
    clientConfig:
      service:
        name: spark-operator-webhook-svc
        namespace: spark
        port: 9443
        path: /validate-sparkoperator-k8s-io-v1beta2-scheduledsparkapplication
    sideEffects: NoneOnDryRun
    failurePolicy: Fail
    namespaceSelector:
      matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
            - default
    rules:
      - apiGroups: ["sparkoperator.k8s.io"]
        apiVersions: ["v1beta2"]
        resources: ["scheduledsparkapplications"]
        operations: ["CREATE", "UPDATE"]
    timeoutSeconds: 10
